HelloUltraviolet/Fixtures/RejectedSource/Expressions/YieldTypeMismatch/Source/Main.uv
//! Rejected async suspension specimen for yielding the wrong output type.

public procedure yieldTypeMismatchReference() -> Async<i32, (), (), !> {
    yield false
    return
}
